# NetworkPacketAnalyzerAndSecurityScanner

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
app/: run.sh
app/backend/cppPacketCapture/: CMakeLists.txt  main.cpp
app/backend/cppPacketCapture/_pybind/: pybind.cpp
app/backend/cppPacketCapture/include/: logger.h  packetCapture.h
app/backend/cppPacketCapture/src/: logger.cpp  manage.cpp  packetCapture.cpp  packetParsing.cpp  preprocessing.cpp
app/backend/cppPacketCapture/tests/: testPacketCapture.cpp  testPacketParsing.cpp  testPreprocessing.cpp
app/backend/cpp_packet_capture/: CMakeLists.txt  main  main.cpp
app/backend/cpp_packet_capture/_pybind/: pybind.cpp
app/backend/cpp_packet_capture/include/: logger.h  manage.h  networkStructures.h  packetCapture.h  packetParsing.h  preprocessing.h  start.h  stopAtomic.h
app/backend/cpp_packet_capture/src/: logger.cpp  manage.cpp  packetCapture.cpp  packetParsing.cpp  preprocessing.cpp  start.cpp  stopAtomic.cpp
app/backend/cpp_packet_capture/tests/: CMakeLists.txt
app/backend/pythonBackend/: main.py
app/backend/pythonBackend/SynAttack/: synAttack.py
app/backend/pythonBackend/dataBaseManager/: database.py  functions.py  models.py
app/backend/pythonBackend/logger/: logger.py
app/backend/pythonBackend/threatDetection/featuresEngineering/: columnNames.py  featuresEngineering.py  synFloodFeaturesEngineering.py
app/backend/pythonBackend/threatDetection/machineLearning/: isolatedForest.py
app/backend/pythonBackend/threatDetection/neuralNetwork/: ann.py
app/backend/pythonBackend/threatDetection/synDetection/: synFloodDetection.py
app/backend/python_backend/: main.py
app/database/: database.db  db_reader.py  package.db
docker/: Dockerfile  docker-compose.yml
docs/: requirements.txt
